package com.dev.alan.patterns.behavioral.memento;

// O Memento armazena o estado

public class EditorMemento {
    private final String content;

    public EditorMemento(String content) {
        this.content = content;
    }

    public String getContent() {
        return content;
    }
}
